Use table ID in output file path for bulk import file writers